<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.projectenv.core</groupId>
        <artifactId>code</artifactId>
        <version>${revision}</version>
    </parent>

    <groupId>io.projectenv.core.commons</groupId>
    <artifactId>commons-root</artifactId>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.release>8</maven.compiler.release>
    </properties>

    <modules>
        <module>native-image</module>
        <module>process</module>
        <module>string-substitutor</module>
        <module>archive</module>
        <module>system</module>
        <module>system-test</module>
    </modules>

</project>